# bank

./: CMakeLists.txt  a.out
logs/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1658737059910503889.wt  collection-0--2407139061534411041.wt  collection-2--1658737059910503889.wt  collection-2--2407139061534411041.wt  collection-4--1658737059910503889.wt  index-1--1658737059910503889.wt  index-1--2407139061534411041.wt  index-3--1658737059910503889.wt  index-3--2407139061534411041.wt  index-5--1658737059910503889.wt  index-6--1658737059910503889.wt  sizeStorer.wt
logs/diagnostic.data/: metrics.2023-06-15T06-17-14Z-00000  metrics.2023-06-15T18-55-08Z-00000  metrics.interim
src/: logic.cpp  logic.hpp  main.cpp
